Project

General

Profile

Actions

Bug #44316

closed

mds: assert(p != active_requests.end())

Added by shen hang about 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
nautilus,mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
crash
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Luminous

crash info:

10454 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x11 0) [0x563b8207afa0]
10455 2: (MDCache::request_get(metareqid_t)+0x267) [0x563b81e0bf87]
10456 3: (Server::journal_close_session(Session*, int, Context*)+0x427) [0x563b81d9 1347]
10457 4: (Server::kill_session(Session*, Context*)+0x209) [0x563b81d93909]
10458 5: (()+0x2dceaf) [0x563b81d36eaf]
10459 6: (MDSRank::evict_client(long, bool, bool, std::basic_stringstream<char, std ::char_traits<char>, std::allocator<char> >&, Context*)+0x76c) [0x563b81d3aa8c ]
10460 7: (Server::evict_cap_revoke_non_responders()+0x2e4) [0x563b81d6f1d4]
10461 8: (MDSRankDispatcher::tick()+0x171) [0x563b81d45f41]
10462 9: (FunctionContext::finish(int)+0x2a) [0x563b81d2a22a]
10463 10: (Context::complete(int)+0x9) [0x563b81d27419]
10464 11: (SafeTimer::timer_thread()+0x104) [0x563b82077844]
10465 12: (SafeTimerThread::entry()+0xd) [0x563b8207926d]
10466 13: (()+0x7e25) [0x7ff05e2dfe25]
10467 14: (clone()+0x6d) [0x7ff05d3c334d]


Related issues 3 (0 open3 closed)

Copied to CephFS - Backport #44476: luminous: mds: assert(p != active_requests.end())ResolvedSidharth AnupkrishnanActions
Copied to CephFS - Backport #44477: mimic: mds: assert(p != active_requests.end())RejectedActions
Copied to CephFS - Backport #44478: nautilus: mds: assert(p != active_requests.end())ResolvedWei-Chung ChengActions
Actions #1

Updated by Patrick Donnelly about 4 years ago

  • Subject changed from mds:assert(p != active_requests.end()) to mds: assert(p != active_requests.end())
  • Status changed from New to Fix Under Review
  • Assignee set to shen hang
  • Priority changed from Normal to High
  • Target version set to v15.0.0
  • Source set to Community (dev)
  • Backport set to nautilus,mimic,luminous
  • Pull request ID set to 33570
  • Affected Versions v12.2.13 added
  • Component(FS) MDS added
  • Labels (FS) crash added
Actions #2

Updated by Patrick Donnelly about 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #44476: luminous: mds: assert(p != active_requests.end()) added
Actions #4

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #44477: mimic: mds: assert(p != active_requests.end()) added
Actions #5

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #44478: nautilus: mds: assert(p != active_requests.end()) added
Actions #6

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF