mds: Using begin() and empty() to iterate the xlist Fixes: https://tracker.ceph.com/issues/44316 The item p pointed to maybe cleaned during the process  of request_kill previous one.

Signed-off-by: Shen Hang <harryshen18@gmail.com>